Fix overflow issue on detailed view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -97,6 +97,7 @@ body {
     max-height: 600px;
     max-width: 600px;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .journeyImages {
